@@ -21,44 +21,43 @@ MANIFEST			This list of files
 MANIFEST.SKIP
 README
 t/00-load.t
-t/01-identification_and_label.t
-t/05-pin.t
-t/10-register.t
-t/15-pwm_spi_adc.t
-t/20-cleanup.t
-t/25-sig_die.t
-t/30-bmp.t
-t/35-pin_map.t
-t/40-interrupt_rising_and_pud.t
-t/41-interrupt_falling_and_pud.t
-t/42-interrupt_both_and_pud.t
-t/45-shift_reg_adc.t
-t/50-dpot.t
-t/55-dac.t
-t/60-lcd.t
-t/64-i2c_exceptions.t
-t/65-i2c.t
-t/67-rtc.t
-t/70-alt_modes.t
-t/75-serial.t
-t/80-mode_state_all_pins.t
-t/85-pwm_hw_mods.t
-t/90-servo.t
-t/92-mcp23017.t
-t/95-pod_linkcheck.t
-t/manifest.t
-t/oled/0000-oled_new.t
-t/oled/0001-oled_string.t
-t/oled/0002-oled_rect.t
-t/oled/0003-oled_dim.t
-t/oled/0004-oled_splash_screen.t
-t/oled/0011-oled_invert_display.t
-t/oled/0013-oled_pixel.t
-t/oled/0015-oled_char.t
-t/oled/0017-oled_vertical_line.t
-t/oled/0019-oled_horizontal_line.t
-t/oled/99-oled_setup.t
-t/pod-coverage.t
+t/100-identification_and_label.t
+t/105-pin.t
+t/106-pin_map.t
+t/107-alt_modes.t
+t/108-mode_state_all_pins.t
+t/109-pwm_hw_mods.t
+t/110-register.t
+t/115-pwm_spi_adc.t
+t/150-cleanup.t
+t/155-sig_die.t
+t/200-interrupt_rising_and_pud.t
+t/201-interrupt_falling_and_pud.t
+t/202-interrupt_both_and_pud.t
+t/300-bmp.t
+t/300-i2c_exceptions.t
+t/305-dpot.t
+t/305-i2c.t
+t/310-dac.t
+t/315-serial.t
+t/320-rtc.t
+t/325-servo.t
+t/330-mcp23017.t
+t/335-shift_reg_adc.t
+t/500-pod_coverage.t
+t/505-pod_linkcheck.t
+t/510-manifest.t
+t/900-oled_new.t
+t/901-oled_string.t
+t/902-oled_rect.t
+t/903-oled_dim.t
+t/904-oled_splash_screen.t
+t/905-oled_invert_display.t
+t/906-oled_pixel.t
+t/907-oled_char.t
+t/908-oled_vertical_line.t
+t/909-oled_horizontal_line.t
+t/999-lcd.t
 t/README
 t/RPiTest.pm
 test/adc.pl
